--- a/src/App.scss
+++ b/src/App.scss
@@ -44,13 +44,27 @@ $break-small: 800px;
 .no-results {
   width: 100%;
   min-height: 300px;
-  height: 100%;
+  height: 30vw;
   display: flex;
   align-items: center;
   justify-content: center;
-  svg {
-    width: 90%;
-    max-width: 150px;
+  border: 1px solid #ccc;
+  margin-top: 15px;
+  border-radius: 5px;
+  &__graphic {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 20vw;
+    height: 20vw;
+    min-width: 200px;
+    min-height: 200px;
+    border-radius: 50%;
+    background: linear-gradient(#eee, #fff);
+    svg {
+      width: 90%;
+      max-width: 150px;
+    }
   }
 }
 
