--- a/src/App.scss
+++ b/src/App.scss
@@ -134,7 +134,9 @@ body {
 }
 
 .status {
-  background-color: #eee;
+  background-color: #DDEBF9;
+  color: #1976D3;
+  // background-color: #eee;
   font-size: 12px;
   text-transform: uppercase;
   font-weight: 700;
