--- a/src/App.scss
+++ b/src/App.scss
@@ -65,6 +65,9 @@ body {
     }
   }
 }
+.mb-1 {
+  margin: 1em 0;
+}
 .no-results {
   width: 100%;
   min-height: 300px;
@@ -104,20 +107,23 @@ body {
   max-height: 0px;
   overflow: hidden;
   transition: all .3s ease-in-out;
-  background-color: #f9f9f9;
   border-radius: 10px;
   display: flex;
   align-items: center;
   &__actions {
     width: 50%;
+    max-width: 500px;
     display: flex;
-    margin-left: 1em;
+    &__action {
+      width: 100%;
+      max-width: 250px;
+      margin-right: 1em;
+    }
   }
 }
 
 .filters-active {
-  margin: 1em 0;
-  padding: 1em 0;
+  padding: 10px 0;
   max-height: 200px;
 }
 
@@ -136,11 +142,28 @@ body {
 .status {
   background-color: #DDEBF9;
   color: #1976D3;
-  // background-color: #eee;
   font-size: 12px;
   text-transform: uppercase;
   font-weight: 700;
   padding: .8em 1.5em;
+  border-radius: 5px;
+  display: inline-block;
+
+  &__container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+}
+
+.status-small {
+  background-color: #DDEBF9;
+  color: #1976D3;
+  font-size: 10px;
+  margin: 0 2px 0 0;
+  text-transform: uppercase;
+  font-weight: 700;
+  padding: 4px 6px;
   border-radius: 5px;
   display: inline-block;
 
